<?xml version="1.0" encoding="utf-8"?><!--suppress AndroidLintUselessParent -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/card_outer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/detail_header"
            android:text="@string/start_time" />

        <TextView
            style="@style/detail_item"
            android:id="@+id/startTime" />

        <TextView
            style="@style/detail_header"
            android:text="@string/end_time" />

        <TextView
            style="@style/detail_item"
            android:id="@+id/endTime" />

        <TextView
            style="@style/detail_header"
            android:text="@string/file_size" />

        <TextView
            style="@style/detail_item"
            android:id="@+id/fileSize" />

        <TextView
            style="@style/detail_header"
            android:text="@string/file_name" />

        <TextView
            android:id="@+id/filePath"
            style="@style/detail_item" />

    </LinearLayout>

    <!--suppress AndroidLintContentDescription -->
    <ImageView style="@style/card_shadow" />

</LinearLayout>