<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageButton
                style="@style/AppTheme.MainPageIcon"
                android:tag="PlayList"
                android:id="@+id/iconPlay"
                android:onClick="onClick"
                android:src="@drawable/button_play_main" />

            <TextView
                android:layout_below="@+id/iconPlay"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                style="@style/AppTheme.MainPageIconText"
                android:text="@string/play" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageButton
                style="@style/AppTheme.MainPageIcon"
                android:id="@+id/iconCalendar"
                android:tag="Calendar"
                android:onClick="onClick"
                android:src="@drawable/button_entries" />

            <TextView
                android:layout_below="@+id/iconCalendar"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                style="@style/AppTheme.MainPageIconText"
                android:text="@string/recordings" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageButton
                style="@style/AppTheme.MainPageIcon"
                android:tag="Manage"
                android:id="@+id/iconManage"
                android:onClick="onClick"
                android:src="@drawable/button_manage" />

            <TextView
                android:layout_below="@+id/iconManage"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                style="@style/AppTheme.MainPageIconText"
                android:text="@string/manage" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageButton
                style="@style/AppTheme.MainPageIcon"
                android:id="@+id/iconAbout"
                android:tag="About"
                android:onClick="onClick"
                android:src="@drawable/button_about" />

            <TextView
                android:layout_below="@+id/iconAbout"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                style="@style/AppTheme.MainPageIconText"
                android:text="@string/about_icon" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
